feat(siren): v1 api (#74)
